--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -24,15 +24,14 @@ header{
     justify-content: space-around;
     align-items: center;
 
-    background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
+    
+    background-color: rgba(26, 27, 24, 80%);
     color: white;
     width: 100%;
     height: 60px;
     border: 1px solid gray;
     border-radius: 5px;
-
     margin-inline: auto;
-
     font-size: 1.2em;
 }
 .menubutton{
@@ -94,14 +93,14 @@ header nav ul{
 
 
 /* SLIDER */ 
-.slider{
-    
+.slider{ 
     width: 100%;
-    height: 270px;
+    height: 240px;
     border: 1px solid rgba(0, 0, 0, 0);
     background-image: url(../img/wallpp.jpg);
     position: relative;
-    top: -50px;
+    background-repeat: no-repeat;
+    top: -10px;
     z-index: 0;
 }
 /* SLIDER */ 
@@ -362,4 +361,11 @@ main{
     width: 80%;
     height: 100%;
     border: 2px solid red;
+}
+
+.headernav{
+    display: flex;
+    position: relative;
+    left: 360px;
+    
 }
