--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -94,10 +94,12 @@ header nav ul{
 
 /* SLIDER */ 
 .slider{ 
+    display: flex;
     width: 100%;
     height: 240px;
     border: 1px solid rgba(0, 0, 0, 0);
     background-image: url(../img/wallpp.jpg);
+    background-size: 100%;
     position: relative;
     background-repeat: no-repeat;
     top: -10px;
