--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -45,17 +45,32 @@ height: 100%;
 border: 1px solid rgb(255, 0, 212);
 
 background-image: url(../img/logo.svg);
-background-size: 90%;
+background-size: 100%;
 background-repeat: no-repeat;
 background-position: center;
 filter: invert(49%) sepia(94%) saturate(2525%) hue-rotate(161deg) brightness(95%) contrast(101%);
 border: 1px solid transparent;
+
+}
+
+.testjogadorprolado{
+    
+    display: flex;
+    align-items: center;
+    width: auto;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0);
+    justify-content: space-between;
+    gap: 45px;
+    
 }
 
 
 header nav ul{
     display: flex;
-    gap: 13px;
+    gap: 10px;
+    font-size: 1em;
+    
 }
 
 .account{
@@ -65,6 +80,8 @@ header nav ul{
     border: 1px solid transparent;
     justify-content: flex-end;
     align-items: center;     
+    position: relative;
+    
 }
 .cube{
     display: flex;
@@ -365,9 +382,5 @@ main{
     border: 2px solid red;
 }
 
-.headernav{
-    display: flex;
-    position: relative;
-    left: 360px;
-    
-}
+
+
