--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -5,7 +5,11 @@
     padding: 0px;
     margin: 0px;
     list-style: none; 
-    font-family: Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Tahoma, Geneva, Verdana, sans-serif;  
+}
+h1{
+    font-size: 2em;
+    margin : 0px;
 }
 
 body{
@@ -23,8 +27,6 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-
-    
     background-color: rgba(26, 27, 24, 80%);
     color: white;
     width: 100%;
@@ -69,7 +71,7 @@ border: 1px solid transparent;
 header nav ul{
     display: flex;
     gap: 10px;
-    font-size: 1em;
+
     
 }
 
@@ -139,6 +141,8 @@ main{
     position: relative;
     top: -50px; 
     border-collapse: collapse;
+    color: white;
+    font-size: 1em;
     
 }
 .main-menu{
@@ -163,12 +167,13 @@ main{
     align-items: flex-start;
     align-content: flex-start;
     padding: 20px 20px;
-    gap: 15px;
+    gap: 0px;
     border: 1px solid rgb(0, 0, 0);
     width: 100%;
     height: 2000px; 
     border-collapse: collapse;
     margin: 0;
+    background: linear-gradient(rgba(31, 117, 175, 0.39) , transparent 15%);
     
 }
 .home-content{
@@ -178,7 +183,7 @@ main{
 }
 .box, .box0{
     color: white;
-    width: 400px;
+    width: 380px;
     height: 117px;
     font-size: 1.2em;
     color: white;
@@ -189,18 +194,7 @@ main{
     display: flex;
     align-items: flex-end;
 }
-.voltar{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 102, 128, 30%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4em;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-    opacity: 90%;
-}
+
 /* Mobile*/
 .openmenu{
     display: none;
@@ -290,18 +284,7 @@ main{
         border-radius: 5px;
         
     }
-    .voltar{
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0, 102, 128, 30%);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 3.4em;
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-        opacity: 90%;
-    }
+
 }
 
 /* TEMP IMGBOX*/
@@ -352,7 +335,6 @@ main{
 }
 
 .mainbox-background{
-    font-size: 1em;
     height: 1.6em;
     width: 100%;
     background-color: rgba(5, 6, 8, 0.781);
@@ -364,22 +346,22 @@ main{
 
 /* Pixels*/
 
-.pixel-content-background {
-    border: 2px solid white;
-    width: 95%;
-    height: 800px;
-    display: flex;
-}
+
 .puxel-content-nav{
-    width: 19%;
+    width: 10%;
     height: 100%;
-    border: 2px solid green;
+    border: 0px solid green;
 }
 
 .pixel-content-main-background{
-    width: 80%;
+    width: 70%;
     height: 100%;
-    border: 2px solid red;
+    border: 0px solid red;
+    padding-left: 20px;
+}
+
+.pixel-content-xp {
+width: 10%;
 }
 
 
