--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -167,13 +167,13 @@ main{
     align-items: flex-start;
     align-content: flex-start;
     padding: 20px 20px;
-    gap: 0px;
+    gap: 20px;
     border: 1px solid rgb(0, 0, 0);
     width: 100%;
     height: 2000px; 
     border-collapse: collapse;
     margin: 0;
-    background: linear-gradient(rgba(31, 117, 175, 0.39) , transparent 15%);
+    background: linear-gradient(rgb(27, 82, 119) , transparent 15%);
     
 }
 .home-content{
@@ -356,16 +356,30 @@ main{
 .pixel-content-main-background{
     width: 70%;
     height: 100%;
-    border: 0px solid red;
-    padding-left: 20px;
+    border: 1px solid red;
+    padding-left: 40px;
 }
 
 .pixel-content-xp {
-width: 10%;
+width: 15%;
 }
 
 .inicio{
     justify-content: left;
 }
 
+.spacebetweentest{
+    justify-content: space-between;
+}
 
+.Agent-overview{
+    max-width: 700px;
+    height: 200px;
+    background-image: url(../img/jettselectagent.png);
+    background-repeat:no-repeat;
+    border-radius: 5px;
+   
+    
+    
+
+}
