--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -6,6 +6,7 @@
     margin: 0px;
     list-style: none; 
     font-family: Tahoma, Geneva, Verdana, sans-serif;  
+    scroll-behavior:smooth;
 }
 h1{
     font-size: 2em;
@@ -374,14 +375,33 @@ width: 15%;
     justify-content: space-between;
 }
 
-.Agent-overview{
-    max-width: 700px;
-    height: 200px;
+.agent-overview{
+    max-width: 70%;
+    height: auto;
     background-image: url(../img/jettselectagent.png);
     background-repeat:no-repeat;
+    background-size: 100%;
     border-radius: 5px;
    
-    
-    
+}
 
+.box-agent-test{
+    display: flex;
+    width: 600px;
+    height: 80px;
+    object-fit: cover;
+    
+    
+}
+.img1{
+    width: 20%;
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+}
+
+.description{
+    height: 100%;
+    width: 80%;
+    border-radius: 0 10px 10px 0;
+    background-color: rgb(41, 41, 43);
 }
