--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -87,6 +87,7 @@ header nav ul{
     align-items: center;     
     position: relative;
     
+    
 }
 .cube{
     display: flex;
@@ -217,8 +218,7 @@ main{
     background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
     position: fixed;
     top: 10px;
-    left: 0;
-    
+    right: 0;
     border-radius: 10px;
     z-index: 5;
 }
@@ -241,6 +241,11 @@ main{
 
         display: flex;
     }
+
+    .account:hover .openaccount{
+        display: flex;
+    }
+
 
     .openmenu nav ul {
         display: flex;
@@ -271,8 +276,10 @@ main{
         width: 98%;    
     }
     .main-menu{
+        display: flex;
+        flex-direction: column;
         font-size: 0.8em;
-        height: 25px;
+        height: 35px;
     }
     .main-content{
         justify-content: center;
@@ -404,4 +411,20 @@ width: 15%;
     width: 80%;
     border-radius: 0 10px 10px 0;
     background-color: rgb(41, 41, 43);
+}
+
+
+.testdesaparecelabel {
+    display: flex;
+    justify-content: space-between;
+    width: -1px;
+    height: -1px;
+    margin: 0;
+    padding: 0px;
+    border: none;
+    white-space: nowrap;
+
+    
+    
+
 }
