--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -1,5 +1,8 @@
-/* Basic styles */
+/* v##################v */ 
+/* v#### ALL PAGES ###v */ 
+/* v##################v */ 
 
+/* Basic styles */
 *{
     box-sizing: border-box;
     padding: 0px;
@@ -17,10 +20,11 @@ body{
     display: flex;
     flex-direction: column;
     background: linear-gradient(#1a1b18, #10110f, #1a1b18);
-    display: flex;
     position: relative;
     top: 10px
 }
+
+
 /* HEADER */ 
 /* DEFAULT */ 
 header{
@@ -39,6 +43,32 @@ header{
 
     z-index: 1;
 }
+
+/* Mobile menu background*/
+.openmenu{
+    display: none;
+    width: 60vw;
+    height: 50vh;
+    background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
+    position: fixed;
+    top: 10px;
+    left: 0;
+    border-radius: 10px;
+    z-index: 5;
+}
+.openaccount{
+    display: none;
+    width: 60vw;
+    height: 50vh;
+    background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
+    position: fixed;
+    top: 10px;
+    right: 0;
+    border-radius: 10px;
+    z-index: 5;
+}
+
+ /* PC HEADER */
 .menubutton{
 display: none;
 }
@@ -47,35 +77,16 @@ display: none;
 margin-left: -10px;
 width: 180px;
 height: 100%;
-border: 1px solid rgb(255, 0, 212);
-
 background-image: url(../img/logo.svg);
 background-size: 100%;
 background-repeat: no-repeat;
 background-position: center;
 filter: invert(49%) sepia(94%) saturate(2525%) hue-rotate(161deg) brightness(95%) contrast(101%);
-border: 1px solid transparent;
-
 }
-
-.testjogadorprolado{
-    
-    display: flex;
-    align-items: center;
-    width: auto;
-    height: 100%;
-    background-color: rgba(255, 0, 0, 0);
-    justify-content: space-between;
-    gap: 45px;
-    
-}
-
 
 header nav ul{
     display: flex;
-    gap: 10px;
-
-    
+    gap: 10px;  
 }
 
 .account{
@@ -104,14 +115,15 @@ header nav ul{
 }
 .accountname{
     margin-right: 0.25em;
-    background-color: transparent;
-    width: 1%;
+    background-color:transparent;
+    width: 1%; /* aumentar isso buga o circulo do perfil*/
     display: flex;
     justify-content: flex-end;
     align-items: center;
     z-index: 1; 
     
 }
+
 /* HEADER */ 
 /* DEFAULT */ 
 
@@ -180,11 +192,13 @@ main{
     background: linear-gradient(rgb(27, 82, 119) , transparent 15%);
     
 }
-.home-content{
-    color: white;
-    border: 1px solid black;
-    height: 100%;
-}
+
+/* ^##################^ */
+/* ^#### ALL PAGES ###^ */ 
+/* ^##################^ */ 
+
+
+
 .box, .box0{
     color: white;
     width: 380px;
@@ -199,29 +213,6 @@ main{
     align-items: flex-end;
 }
 
-/* Mobile*/
-.openmenu{
-    display: none;
-    width: 60vw;
-    height: 50vh;
-    background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
-    position: fixed;
-    top: 10px;
-    left: 0;
-    border-radius: 10px;
-    z-index: 5;
-}
-.openaccount{
-    display: none;
-    width: 60vw;
-    height: 50vh;
-    background: linear-gradient(#1a1b18 ,  rgb(39, 42, 48) , #1a1b18);
-    position: fixed;
-    top: 10px;
-    right: 0;
-    border-radius: 10px;
-    z-index: 5;
-}
 
 
 
@@ -232,33 +223,8 @@ main{
         z-index: 1;
      }
 
-
-    .headernav {  
-        content-visibility: hidden;    
-    }
-
-    .menubutton:hover .openmenu{
-
-        display: flex;
-    }
-
-    .account:hover .openaccount{
-        display: flex;
-    }
-
-
-    .openmenu nav ul {
-        display: flex;
-        flex-direction: column;  
-        margin-left: 15px;  
-        margin-top: 15px;
-    }
-
-    .logo{
-        width: 110px;
-        height: 100%;
-        }
-
+/* Header on mobile */
+/* header menu mobile*/
     .menubutton{
         display: initial;
         width: 35px;
@@ -266,12 +232,50 @@ main{
         background-color: rgb(133, 195, 214);
         border-radius: 5px;
     }
+    .openmenu nav ul {
+        display: flex;
+        flex-direction: column;  
+        margin-left: 15px;  
+        margin-top: 15px;
+    }  
+    .menubutton:hover .openmenu{
+        display: flex;
+    }
+   
 
+
+ /* Header account*/  
+ .account:hover .openaccount{
+    display: flex;
+}
+
+
+
+
+ /* Logo */  
+    .logo{
+        width: 110px;
+        height: 100%;
+    }
+
+
+
+/* Header pc navigation*/  
+    .headernav {  
+        content-visibility: hidden;    
+    }
+
+
+
+
+/* Slider Mobile */
     .slider{  
        height: 160px;
        background-size: 100%;
     }
 
+
+/* Main Mobile */
     main{
         width: 98%;    
     }
@@ -285,6 +289,8 @@ main{
         justify-content: center;
         align-content: flex-start;
     }
+
+/* Guides page box */
     .box, .box0{
         font-size: 1.2em;
         color: white;
