--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -319,7 +319,7 @@ main{
 /* RIGHT BAR */
 
 .content-right{
-width: auto;
+width: 15%;
 padding : 10px;
 }
 
@@ -347,12 +347,13 @@ padding : 10px;
 
 .box-agent-test{
     display: flex;
-    width: 60%;
+    min-width: 400px;
+    max-width: 70%;
     height: 90px;
     object-fit: cover;  
 }
 .img1{
-    width: 90px;
+    width: 130px;
     height: 90px;
     border-radius: 10px 0 0 10px;
 }
@@ -477,8 +478,13 @@ padding : 10px;
 
     .box-agent-test{
         display: flex;
+        min-width: 1px;
+        max-width: 100%;
+
         width: 100%;
         height: 70px;
+
+
     }
     .img1{
         width: 80px;
