--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -357,6 +357,7 @@ padding : 10px;
 .img1{
     width: 130px;
     height: 90px;
+    object-position: center;
     border-radius: 10px 0 0 10px;
 }
 
@@ -380,7 +381,7 @@ padding : 10px;
 
 
 .recomendados{
-    background-color: red;
+    background-color: rgba(0, 81, 255, 0.24);
     width: 100%;
     height: 200px;
     margin-top: 20px;
@@ -515,6 +516,8 @@ footer{
     .img1{
         width: 80px;
         height: 100%;
+        object-position: center;
+
     }
 
      .box-agent-test-title {
