--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -131,7 +131,7 @@ header nav ul{
 
 
 /* SLIDER LIMPAR CODIGO */ 
-.slider{ 
+.slider-background-improviso{ 
     display: flex;
     width: 100%;
     height: 240px;
@@ -425,7 +425,7 @@ footer{
 
 
 /* Slider Mobile */
-    .slider{  
+    .slider-background-improviso{  
        height: 160px;
        background-size: 100%;
     }
