--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -529,3 +529,11 @@ footer{
 /* ^###### MOBILE ####^ */ 
 /* ^##################^ */
 
+
+/* Area de testes */
+
+
+
+#vapo:checked ~ #doc_jett_1 > #doc_jett_1l2{
+    display: none;
+}
