--- a/src/freestyle.css
+++ b/src/freestyle.css
@@ -304,7 +304,7 @@ main{
     height: 100%;
     border: 0px solid red;
     padding: 10px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     padding-top: 0px;
 }
 
@@ -325,7 +325,7 @@ border: 0px solid rgb(1, 199, 172);
 
 .agent-overview{ 
     height: auto;
-    max-height: 600px;  
+    max-height: 350px;  
     background-image: url(../img/jettselectagent.png);
     background-repeat:no-repeat;
     background-size: 100%;
@@ -343,18 +343,13 @@ border: 0px solid rgb(1, 199, 172);
      
     margin-top: 30px;
 }
-.img1{
-    width: 130px;
-    height: 90px;
-    object-position: center;
-    border-radius: 10px 0 0 10px;
-}
+
 
 .description{
     width:20px;
     height: auto;
     border-radius: 0 10px 10px 0;
-    background-color: rgb(41, 41, 43);
+    background-color: #29292b;
 }
 
 .box-agent-test-title {
@@ -368,14 +363,6 @@ border: 0px solid rgb(1, 199, 172);
 
 /* A unreal so difere no font weight, o h1 fica com o msm tamanho do <p> */
 
-
-.recomendados{
-    background-color: rgba(0, 81, 255, 0.24);
-    width: 100%;
-    height: 200px;
-    margin-top: 20px;
-   
-}
 footer{
     display: flex;
     background: blue;
